[package]
name = "lox-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
unicode-segmentation = "1.10.1"
itertools = "0.12.1"

num-derive = "0.4.2"
num-traits = "0.2.19"
bumpalo = { version = "3.16.0", features = ["allocator_api"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
